--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.fs.socialcareapp">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -20,11 +21,9 @@
         <activity
             android:name=".ListActivity"
             android:label="List of Clients"
-            android:screenOrientation="portrait"></activity>
-
-        <activity android:name=".ClientActivity">
-
-        </activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".ClientActivity"></activity>
+        <activity android:name=".InfoActivity"></activity>
     </application>
 
 </manifest>
